[add] add description

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Github label checker",
   "version": "0.0.1",
-  "description": "Build an Extension!",
+  "description": "notice when labels is empty on pull request",
   "permissions": ["activeTab", "declarativeContent", "storage"],
   "options_page": "options.html",
   "page_action": {
